# ScriptLogCleaner

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  ScriptLogCleaner.sln  makefile
ScriptLogCleaner/: ScriptLogCleaner.cpp  ScriptLogCleaner.vcxproj  ScriptLogCleaner.vcxproj.filters
src/: ScriptLogCleaner.cpp
